manifests/deployment-1.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "shengrossdevopsdemo-305c"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "shengrossdevopsdemo-305c"
  template:
    metadata:
      labels:
        app: "shengrossdevopsdemo-305c"
    spec:
      containers:
        - name: "shengrossdevopsdemo-305c"
          image: "shengrossdevopsdemoacr.azurecr.io/shengrossdevopsdemo"
          ports:
          - containerPort: 8080
