manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "shengrossdevopsdemo-a3d3"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "shengrossdevopsdemo-a3d3"
  template:
    metadata:
      labels:
        app: "shengrossdevopsdemo-a3d3"
    spec:
      containers:
        - name: "shengrossdevopsdemo-a3d3"
          image: "shengrossdevopsdemoacr.azurecr.io/shengrossdevopsdemo"
          ports:
          - containerPort: 8080
