manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "shengrossdevopsdemo-a3d3"
    labels:
        app: "shengrossdevopsdemo-a3d3"
spec:
    type: ClusterIP
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "shengrossdevopsdemo-a3d3"
