manifests/ingress-1.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "shengrossdevopsdemo-305c"
    labels:
        app: "shengrossdevopsdemo-305c"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: shengrossdevopsdemo9007-shengrossdevopsdemo-305c.0ae56663952b4f9ba4df.westeurope.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "shengrossdevopsdemo-305c"
                servicePort: 8080
